WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216491
AudioDestinationCocoa should stop hardcoding the number of output channels to 2
https://bugs.webkit.org/show_bug.cgi?id=216491
Summary
AudioDestinationCocoa should stop hardcoding the number of output channels to 2
Chris Dumez
Reported
2020-09-14 12:23:40 PDT
AudioDestinationCocoa should stop hardcoding the number of output channels to 2 and instead use the AudioDestinationNode's number of output channels.
Attachments
Patch
(8.52 KB, patch)
2020-09-14 12:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-14 12:25:15 PDT
Created
attachment 408735
[details]
Patch
EWS
Comment 2
2020-09-14 13:31:39 PDT
Committed
r267036
: <
https://trac.webkit.org/changeset/267036
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408735
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-14 13:32:16 PDT
<
rdar://problem/68875001
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug