AudioDestinationCocoa should stop hardcoding the number of output channels to 2 https://bugs.webkit.org/show_bug.cgi?id=216491

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline existing test.

* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv-expected.txt:

Source/WebCore:

Stop hardcoding the number of output channels in AudioDestinationCocoa and instead use the AudioDestinationNode's
number of output channels.

* platform/audio/cocoa/AudioDestinationCocoa.cpp:
(WebCore::AudioDestination::create):
(WebCore::AudioDestinationCocoa::AudioDestinationCocoa):
(WebCore::AudioDestinationCocoa::numberOfOutputChannels const):
(WebCore::AudioDestinationCocoa::setAudioStreamBasicDescription):
(): Deleted.
* platform/audio/cocoa/AudioDestinationCocoa.h:
* platform/mock/MockAudioDestinationCocoa.cpp:
(WebCore::MockAudioDestinationCocoa::MockAudioDestinationCocoa):


Canonical link: https://commits.webkit.org/229326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267036 268f45cc-cd09-0410-ab3c-d52691b4dbfc